components/4.18.x/aws2-ec2-component.md
Camel Components

# AWS Elastic Compute Cloud (EC2)

**Since Camel 3.1**

**Only producer is supported**

The AWS2 EC2 component supports the ability to create, run, start, stop and terminate [AWS EC2](https://aws.amazon.com/ec2/) instances.

Prerequisites

You must have a valid Amazon Web Services developer account, and be signed up to use Amazon EC2. More information is available at [Amazon EC2](https://aws.amazon.com/ec2/).

## URI Format

aws2-ec2://label\[?options\]

You can append query options to the URI in the following format:

`?options=value&option2=value&…​`

## Configuring Options

Camel components are configured on two separate levels:

-   component level
    
-   endpoint level
    

### Configuring Component Options

At the component level, you set general and shared configurations that are, then, inherited by the endpoints. It is the highest configuration level.

For example, a component may have security settings, credentials for authentication, urls for network connection and so forth.

Some components only have a few options, and others may have many. Because components typically have pre-configured defaults that are commonly used, then you may often only need to configure a few options on a component; or none at all.

You can configure components using:

-   the [Component DSL](../../manual/component-dsl.md).
    
-   in a configuration file (`application.properties`, `*.yaml` files, etc).
    
-   directly in the Java code.
    

### Configuring Endpoint Options

You usually spend more time setting up endpoints because they have many options. These options help you customize what you want the endpoint to do. The options are also categorized into whether the endpoint is used as a consumer (_from_), as a producer (_to_), or both.

Configuring endpoints is most often done directly in the endpoint URI as _path_ and _query_ parameters. You can also use the [Endpoint DSL](../../manual/Endpoint-dsl.md) and [DataFormat DSL](../../manual/dataformat-dsl.md) as a _type safe_ way of configuring endpoints and data formats in Java.

A good practice when configuring options is to use [Property Placeholders](../../manual/using-propertyplaceholder.md).

Property placeholders provide a few benefits:

-   They help prevent using hardcoded urls, port numbers, sensitive information, and other settings.
    
-   They allow externalizing the configuration from the code.
    
-   They help the code to become more flexible and reusable.
    

The following two sections list all the options, firstly for the component followed by the endpoint.

## Component Options

The AWS Elastic Compute Cloud (EC2) component supports 22 options, which are listed below.

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **amazonEc2Client** (producer) | **Autowired** To use an existing configured AmazonEC2Client client. |  | Ec2Client |
| **configuration** (producer) | The component configuration. |  | AWS2EC2Configuration |
| **lazyStartProducer** (producer) | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | boolean |
| **operation** (producer) | 
**Required** The operation to perform. It can be createAndRunInstances, startInstances, stopInstances, terminateInstances, describeInstances, describeInstancesStatus, rebootInstances, monitorInstances, unmonitorInstances, createTags or deleteTags.

Enum values:

-   createAndRunInstances
    
-   startInstances
    
-   stopInstances
    
-   terminateInstances
    
-   describeInstances
    
-   describeInstancesStatus
    
-   rebootInstances
    
-   monitorInstances
    
-   unmonitorInstances
    
-   createTags
    
-   deleteTags
    





 |  | AWS2EC2Operations |
| **overrideEndpoint** (producer) | Set the need for overriding the endpoint. This option needs to be used in combination with the uriEndpointOverride option. | false | boolean |
| **pojoRequest** (producer) | If we want to use a POJO request as body or not. | false | boolean |
| **region** (producer) | 

The region in which EC2 client needs to work. When using this parameter, the configuration will expect the lowercase name of the region (for example, ap-east-1) You’ll need to use the name Region.EU\_WEST\_1.id().

Enum values:

-   ap-south-2
    
-   ap-south-1
    
-   eu-south-1
    
-   eu-south-2
    
-   us-gov-east-1
    
-   me-central-1
    
-   il-central-1
    
-   ca-central-1
    
-   eu-central-1
    
-   us-iso-west-1
    
-   eu-central-2
    
-   eu-isoe-west-1
    
-   us-west-1
    
-   us-west-2
    
-   af-south-1
    
-   eu-north-1
    
-   eu-west-3
    
-   eu-west-2
    
-   eu-west-1
    
-   ap-northeast-3
    
-   ap-northeast-2
    
-   ap-northeast-1
    
-   me-south-1
    
-   sa-east-1
    
-   ap-east-1
    
-   cn-north-1
    
-   ca-west-1
    
-   us-gov-west-1
    
-   ap-southeast-1
    
-   ap-southeast-2
    
-   us-iso-east-1
    
-   ap-southeast-3
    
-   ap-southeast-4
    
-   us-east-1
    
-   us-east-2
    
-   cn-northwest-1
    
-   us-isob-east-1
    
-   aws-global
    
-   aws-cn-global
    
-   aws-us-gov-global
    
-   aws-iso-global
    
-   aws-iso-b-global
    





 |  | String |
| **uriEndpointOverride** (producer) | Set the overriding uri endpoint. This option needs to be used in combination with overrideEndpoint option. |  | String |
| **autowiredEnabled** (advanced) | Whether autowiring is enabled. This is used for automatic autowiring options (the option must be marked as autowired) by looking up in the registry to find if there is a single instance of matching type, which then gets configured on the component. This can be used for automatic configuring JDBC data sources, JMS connection factories, AWS Clients, etc. | true | boolean |
| **healthCheckConsumerEnabled** (health) | Used for enabling or disabling all consumer based health checks from this component. | true | boolean |
| **healthCheckProducerEnabled** (health) | Used for enabling or disabling all producer based health checks from this component. Notice: Camel has by default disabled all producer based health-checks. You can turn on producer checks globally by setting camel.health.producersEnabled=true. | true | boolean |
| **proxyHost** (proxy) | To define a proxy host when instantiating the EC2 client. |  | String |
| **proxyPort** (proxy) | To define a proxy port when instantiating the EC2 client. |  | Integer |
| **proxyProtocol** (proxy) | 

To define a proxy protocol when instantiating the EC2 client.

Enum values:

-   HTTP
    
-   HTTPS
    





 | HTTPS | Protocol |
| **accessKey** (security) | Amazon AWS Access Key. |  | String |
| **profileCredentialsName** (security) | If using a profile credentials provider, this parameter will set the profile name. |  | String |
| **secretKey** (security) | Amazon AWS Secret Key. |  | String |
| **sessionToken** (security) | Amazon AWS Session Token used when the user needs to assume an IAM role. |  | String |
| **trustAllCertificates** (security) | If we want to trust all certificates in case of overriding the endpoint. | false | boolean |
| **useDefaultCredentialsProvider** (security) | Set whether the EC2 client should expect to load credentials through a default credentials provider or to expect static credentials to be passed in. | false | boolean |
| **useProfileCredentialsProvider** (security) | Set whether the EC2 client should expect to load credentials through a profile credentials provider. | false | boolean |
| **useSessionCredentials** (security) | Set whether the EC2 client should expect to use Session Credentials. This is useful in a situation in which the user needs to assume an IAM role for doing operations in EC2. | false | boolean |

## Endpoint Options

The AWS Elastic Compute Cloud (EC2) endpoint is configured using URI syntax:

aws2-ec2:label

With the following _path_ and _query_ parameters:

### Path Parameters (1 parameters)

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **label** (producer) | **Required** Logical name. |  | String |

### Query Parameters (18 parameters)

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **amazonEc2Client** (producer) | **Autowired** To use an existing configured AmazonEC2Client client. |  | Ec2Client |
| **operation** (producer) | 
**Required** The operation to perform. It can be createAndRunInstances, startInstances, stopInstances, terminateInstances, describeInstances, describeInstancesStatus, rebootInstances, monitorInstances, unmonitorInstances, createTags or deleteTags.

Enum values:

-   createAndRunInstances
    
-   startInstances
    
-   stopInstances
    
-   terminateInstances
    
-   describeInstances
    
-   describeInstancesStatus
    
-   rebootInstances
    
-   monitorInstances
    
-   unmonitorInstances
    
-   createTags
    
-   deleteTags
    





 |  | AWS2EC2Operations |
| **overrideEndpoint** (producer) | Set the need for overriding the endpoint. This option needs to be used in combination with the uriEndpointOverride option. | false | boolean |
| **pojoRequest** (producer) | If we want to use a POJO request as body or not. | false | boolean |
| **region** (producer) | 

The region in which EC2 client needs to work. When using this parameter, the configuration will expect the lowercase name of the region (for example, ap-east-1) You’ll need to use the name Region.EU\_WEST\_1.id().

Enum values:

-   ap-south-2
    
-   ap-south-1
    
-   eu-south-1
    
-   eu-south-2
    
-   us-gov-east-1
    
-   me-central-1
    
-   il-central-1
    
-   ca-central-1
    
-   eu-central-1
    
-   us-iso-west-1
    
-   eu-central-2
    
-   eu-isoe-west-1
    
-   us-west-1
    
-   us-west-2
    
-   af-south-1
    
-   eu-north-1
    
-   eu-west-3
    
-   eu-west-2
    
-   eu-west-1
    
-   ap-northeast-3
    
-   ap-northeast-2
    
-   ap-northeast-1
    
-   me-south-1
    
-   sa-east-1
    
-   ap-east-1
    
-   cn-north-1
    
-   ca-west-1
    
-   us-gov-west-1
    
-   ap-southeast-1
    
-   ap-southeast-2
    
-   us-iso-east-1
    
-   ap-southeast-3
    
-   ap-southeast-4
    
-   us-east-1
    
-   us-east-2
    
-   cn-northwest-1
    
-   us-isob-east-1
    
-   aws-global
    
-   aws-cn-global
    
-   aws-us-gov-global
    
-   aws-iso-global
    
-   aws-iso-b-global
    





 |  | String |
| **uriEndpointOverride** (producer) | Set the overriding uri endpoint. This option needs to be used in combination with overrideEndpoint option. |  | String |
| **lazyStartProducer** (producer (advanced)) | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | boolean |
| **proxyHost** (proxy) | To define a proxy host when instantiating the EC2 client. |  | String |
| **proxyPort** (proxy) | To define a proxy port when instantiating the EC2 client. |  | Integer |
| **proxyProtocol** (proxy) | 

To define a proxy protocol when instantiating the EC2 client.

Enum values:

-   HTTP
    
-   HTTPS
    





 | HTTPS | Protocol |
| **accessKey** (security) | Amazon AWS Access Key. |  | String |
| **profileCredentialsName** (security) | If using a profile credentials provider, this parameter will set the profile name. |  | String |
| **secretKey** (security) | Amazon AWS Secret Key. |  | String |
| **sessionToken** (security) | Amazon AWS Session Token used when the user needs to assume an IAM role. |  | String |
| **trustAllCertificates** (security) | If we want to trust all certificates in case of overriding the endpoint. | false | boolean |
| **useDefaultCredentialsProvider** (security) | Set whether the EC2 client should expect to load credentials through a default credentials provider or to expect static credentials to be passed in. | false | boolean |
| **useProfileCredentialsProvider** (security) | Set whether the EC2 client should expect to load credentials through a profile credentials provider. | false | boolean |
| **useSessionCredentials** (security) | Set whether the EC2 client should expect to use Session Credentials. This is useful in a situation in which the user needs to assume an IAM role for doing operations in EC2. | false | boolean |

## Message Headers

The AWS Elastic Compute Cloud (EC2) component supports 18 message header(s), which is/are listed below:

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **CamelAwsEC2ImageId** (producer) Constant: [`IMAGE_ID`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#IMAGE_ID) | An image ID of the AWS marketplace. |  | String |
| **CamelAwsEC2InstanceType** (producer) Constant: [`INSTANCE_TYPE`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#INSTANCE_TYPE) | 
The instance type we want to create and run.

Enum values:

-   a1.medium
    
-   a1.large
    
-   a1.xlarge
    
-   a1.2xlarge
    
-   a1.4xlarge
    
-   a1.metal
    
-   c1.medium
    
-   c1.xlarge
    
-   c3.large
    
-   c3.xlarge
    
-   c3.2xlarge
    
-   c3.4xlarge
    
-   c3.8xlarge
    
-   c4.large
    
-   c4.xlarge
    
-   c4.2xlarge
    
-   c4.4xlarge
    
-   c4.8xlarge
    
-   c5.large
    
-   c5.xlarge
    
-   c5.2xlarge
    
-   c5.4xlarge
    
-   c5.9xlarge
    
-   c5.12xlarge
    
-   c5.18xlarge
    
-   c5.24xlarge
    
-   c5.metal
    
-   c5a.large
    
-   c5a.xlarge
    
-   c5a.2xlarge
    
-   c5a.4xlarge
    
-   c5a.8xlarge
    
-   c5a.12xlarge
    
-   c5a.16xlarge
    
-   c5a.24xlarge
    
-   c5ad.large
    
-   c5ad.xlarge
    
-   c5ad.2xlarge
    
-   c5ad.4xlarge
    
-   c5ad.8xlarge
    
-   c5ad.12xlarge
    
-   c5ad.16xlarge
    
-   c5ad.24xlarge
    
-   c5d.large
    
-   c5d.xlarge
    
-   c5d.2xlarge
    
-   c5d.4xlarge
    
-   c5d.9xlarge
    
-   c5d.12xlarge
    
-   c5d.18xlarge
    
-   c5d.24xlarge
    
-   c5d.metal
    
-   c5n.large
    
-   c5n.xlarge
    
-   c5n.2xlarge
    
-   c5n.4xlarge
    
-   c5n.9xlarge
    
-   c5n.18xlarge
    
-   c5n.metal
    
-   c6g.medium
    
-   c6g.large
    
-   c6g.xlarge
    
-   c6g.2xlarge
    
-   c6g.4xlarge
    
-   c6g.8xlarge
    
-   c6g.12xlarge
    
-   c6g.16xlarge
    
-   c6g.metal
    
-   c6gd.medium
    
-   c6gd.large
    
-   c6gd.xlarge
    
-   c6gd.2xlarge
    
-   c6gd.4xlarge
    
-   c6gd.8xlarge
    
-   c6gd.12xlarge
    
-   c6gd.16xlarge
    
-   c6gd.metal
    
-   c6gn.medium
    
-   c6gn.large
    
-   c6gn.xlarge
    
-   c6gn.2xlarge
    
-   c6gn.4xlarge
    
-   c6gn.8xlarge
    
-   c6gn.12xlarge
    
-   c6gn.16xlarge
    
-   c6i.large
    
-   c6i.xlarge
    
-   c6i.2xlarge
    
-   c6i.4xlarge
    
-   c6i.8xlarge
    
-   c6i.12xlarge
    
-   c6i.16xlarge
    
-   c6i.24xlarge
    
-   c6i.32xlarge
    
-   c6i.metal
    
-   cc1.4xlarge
    
-   cc2.8xlarge
    
-   cg1.4xlarge
    
-   cr1.8xlarge
    
-   d2.xlarge
    
-   d2.2xlarge
    
-   d2.4xlarge
    
-   d2.8xlarge
    
-   d3.xlarge
    
-   d3.2xlarge
    
-   d3.4xlarge
    
-   d3.8xlarge
    
-   d3en.xlarge
    
-   d3en.2xlarge
    
-   d3en.4xlarge
    
-   d3en.6xlarge
    
-   d3en.8xlarge
    
-   d3en.12xlarge
    
-   dl1.24xlarge
    
-   f1.2xlarge
    
-   f1.4xlarge
    
-   f1.16xlarge
    
-   g2.2xlarge
    
-   g2.8xlarge
    
-   g3.4xlarge
    
-   g3.8xlarge
    
-   g3.16xlarge
    
-   g3s.xlarge
    
-   g4ad.xlarge
    
-   g4ad.2xlarge
    
-   g4ad.4xlarge
    
-   g4ad.8xlarge
    
-   g4ad.16xlarge
    
-   g4dn.xlarge
    
-   g4dn.2xlarge
    
-   g4dn.4xlarge
    
-   g4dn.8xlarge
    
-   g4dn.12xlarge
    
-   g4dn.16xlarge
    
-   g4dn.metal
    
-   g5.xlarge
    
-   g5.2xlarge
    
-   g5.4xlarge
    
-   g5.8xlarge
    
-   g5.12xlarge
    
-   g5.16xlarge
    
-   g5.24xlarge
    
-   g5.48xlarge
    
-   g5g.xlarge
    
-   g5g.2xlarge
    
-   g5g.4xlarge
    
-   g5g.8xlarge
    
-   g5g.16xlarge
    
-   g5g.metal
    
-   hi1.4xlarge
    
-   hpc6a.48xlarge
    
-   hs1.8xlarge
    
-   h1.2xlarge
    
-   h1.4xlarge
    
-   h1.8xlarge
    
-   h1.16xlarge
    
-   i2.xlarge
    
-   i2.2xlarge
    
-   i2.4xlarge
    
-   i2.8xlarge
    
-   i3.large
    
-   i3.xlarge
    
-   i3.2xlarge
    
-   i3.4xlarge
    
-   i3.8xlarge
    
-   i3.16xlarge
    
-   i3.metal
    
-   i3en.large
    
-   i3en.xlarge
    
-   i3en.2xlarge
    
-   i3en.3xlarge
    
-   i3en.6xlarge
    
-   i3en.12xlarge
    
-   i3en.24xlarge
    
-   i3en.metal
    
-   im4gn.large
    
-   im4gn.xlarge
    
-   im4gn.2xlarge
    
-   im4gn.4xlarge
    
-   im4gn.8xlarge
    
-   im4gn.16xlarge
    
-   inf1.xlarge
    
-   inf1.2xlarge
    
-   inf1.6xlarge
    
-   inf1.24xlarge
    
-   is4gen.medium
    
-   is4gen.large
    
-   is4gen.xlarge
    
-   is4gen.2xlarge
    
-   is4gen.4xlarge
    
-   is4gen.8xlarge
    
-   m1.small
    
-   m1.medium
    
-   m1.large
    
-   m1.xlarge
    
-   m2.xlarge
    
-   m2.2xlarge
    
-   m2.4xlarge
    
-   m3.medium
    
-   m3.large
    
-   m3.xlarge
    
-   m3.2xlarge
    
-   m4.large
    
-   m4.xlarge
    
-   m4.2xlarge
    
-   m4.4xlarge
    
-   m4.10xlarge
    
-   m4.16xlarge
    
-   m5.large
    
-   m5.xlarge
    
-   m5.2xlarge
    
-   m5.4xlarge
    
-   m5.8xlarge
    
-   m5.12xlarge
    
-   m5.16xlarge
    
-   m5.24xlarge
    
-   m5.metal
    
-   m5a.large
    
-   m5a.xlarge
    
-   m5a.2xlarge
    
-   m5a.4xlarge
    
-   m5a.8xlarge
    
-   m5a.12xlarge
    
-   m5a.16xlarge
    
-   m5a.24xlarge
    
-   m5ad.large
    
-   m5ad.xlarge
    
-   m5ad.2xlarge
    
-   m5ad.4xlarge
    
-   m5ad.8xlarge
    
-   m5ad.12xlarge
    
-   m5ad.16xlarge
    
-   m5ad.24xlarge
    
-   m5d.large
    
-   m5d.xlarge
    
-   m5d.2xlarge
    
-   m5d.4xlarge
    
-   m5d.8xlarge
    
-   m5d.12xlarge
    
-   m5d.16xlarge
    
-   m5d.24xlarge
    
-   m5d.metal
    
-   m5dn.large
    
-   m5dn.xlarge
    
-   m5dn.2xlarge
    
-   m5dn.4xlarge
    
-   m5dn.8xlarge
    
-   m5dn.12xlarge
    
-   m5dn.16xlarge
    
-   m5dn.24xlarge
    
-   m5dn.metal
    
-   m5n.large
    
-   m5n.xlarge
    
-   m5n.2xlarge
    
-   m5n.4xlarge
    
-   m5n.8xlarge
    
-   m5n.12xlarge
    
-   m5n.16xlarge
    
-   m5n.24xlarge
    
-   m5n.metal
    
-   m5zn.large
    
-   m5zn.xlarge
    
-   m5zn.2xlarge
    
-   m5zn.3xlarge
    
-   m5zn.6xlarge
    
-   m5zn.12xlarge
    
-   m5zn.metal
    
-   m6a.large
    
-   m6a.xlarge
    
-   m6a.2xlarge
    
-   m6a.4xlarge
    
-   m6a.8xlarge
    
-   m6a.12xlarge
    
-   m6a.16xlarge
    
-   m6a.24xlarge
    
-   m6a.32xlarge
    
-   m6a.48xlarge
    
-   m6g.metal
    
-   m6g.medium
    
-   m6g.large
    
-   m6g.xlarge
    
-   m6g.2xlarge
    
-   m6g.4xlarge
    
-   m6g.8xlarge
    
-   m6g.12xlarge
    
-   m6g.16xlarge
    
-   m6gd.metal
    
-   m6gd.medium
    
-   m6gd.large
    
-   m6gd.xlarge
    
-   m6gd.2xlarge
    
-   m6gd.4xlarge
    
-   m6gd.8xlarge
    
-   m6gd.12xlarge
    
-   m6gd.16xlarge
    
-   m6i.large
    
-   m6i.xlarge
    
-   m6i.2xlarge
    
-   m6i.4xlarge
    
-   m6i.8xlarge
    
-   m6i.12xlarge
    
-   m6i.16xlarge
    
-   m6i.24xlarge
    
-   m6i.32xlarge
    
-   m6i.metal
    
-   mac1.metal
    
-   p2.xlarge
    
-   p2.8xlarge
    
-   p2.16xlarge
    
-   p3.2xlarge
    
-   p3.8xlarge
    
-   p3.16xlarge
    
-   p3dn.24xlarge
    
-   p4d.24xlarge
    
-   r3.large
    
-   r3.xlarge
    
-   r3.2xlarge
    
-   r3.4xlarge
    
-   r3.8xlarge
    
-   r4.large
    
-   r4.xlarge
    
-   r4.2xlarge
    
-   r4.4xlarge
    
-   r4.8xlarge
    
-   r4.16xlarge
    
-   r5.large
    
-   r5.xlarge
    
-   r5.2xlarge
    
-   r5.4xlarge
    
-   r5.8xlarge
    
-   r5.12xlarge
    
-   r5.16xlarge
    
-   r5.24xlarge
    
-   r5.metal
    
-   r5a.large
    
-   r5a.xlarge
    
-   r5a.2xlarge
    
-   r5a.4xlarge
    
-   r5a.8xlarge
    
-   r5a.12xlarge
    
-   r5a.16xlarge
    
-   r5a.24xlarge
    
-   r5ad.large
    
-   r5ad.xlarge
    
-   r5ad.2xlarge
    
-   r5ad.4xlarge
    
-   r5ad.8xlarge
    
-   r5ad.12xlarge
    
-   r5ad.16xlarge
    
-   r5ad.24xlarge
    
-   r5b.large
    
-   r5b.xlarge
    
-   r5b.2xlarge
    
-   r5b.4xlarge
    
-   r5b.8xlarge
    
-   r5b.12xlarge
    
-   r5b.16xlarge
    
-   r5b.24xlarge
    
-   r5b.metal
    
-   r5d.large
    
-   r5d.xlarge
    
-   r5d.2xlarge
    
-   r5d.4xlarge
    
-   r5d.8xlarge
    
-   r5d.12xlarge
    
-   r5d.16xlarge
    
-   r5d.24xlarge
    
-   r5d.metal
    
-   r5dn.large
    
-   r5dn.xlarge
    
-   r5dn.2xlarge
    
-   r5dn.4xlarge
    
-   r5dn.8xlarge
    
-   r5dn.12xlarge
    
-   r5dn.16xlarge
    
-   r5dn.24xlarge
    
-   r5dn.metal
    
-   r5n.large
    
-   r5n.xlarge
    
-   r5n.2xlarge
    
-   r5n.4xlarge
    
-   r5n.8xlarge
    
-   r5n.12xlarge
    
-   r5n.16xlarge
    
-   r5n.24xlarge
    
-   r5n.metal
    
-   r6g.medium
    
-   r6g.large
    
-   r6g.xlarge
    
-   r6g.2xlarge
    
-   r6g.4xlarge
    
-   r6g.8xlarge
    
-   r6g.12xlarge
    
-   r6g.16xlarge
    
-   r6g.metal
    
-   r6gd.medium
    
-   r6gd.large
    
-   r6gd.xlarge
    
-   r6gd.2xlarge
    
-   r6gd.4xlarge
    
-   r6gd.8xlarge
    
-   r6gd.12xlarge
    
-   r6gd.16xlarge
    
-   r6gd.metal
    
-   r6i.large
    
-   r6i.xlarge
    
-   r6i.2xlarge
    
-   r6i.4xlarge
    
-   r6i.8xlarge
    
-   r6i.12xlarge
    
-   r6i.16xlarge
    
-   r6i.24xlarge
    
-   r6i.32xlarge
    
-   r6i.metal
    
-   t1.micro
    
-   t2.nano
    
-   t2.micro
    
-   t2.small
    
-   t2.medium
    
-   t2.large
    
-   t2.xlarge
    
-   t2.2xlarge
    
-   t3.nano
    
-   t3.micro
    
-   t3.small
    
-   t3.medium
    
-   t3.large
    
-   t3.xlarge
    
-   t3.2xlarge
    
-   t3a.nano
    
-   t3a.micro
    
-   t3a.small
    
-   t3a.medium
    
-   t3a.large
    
-   t3a.xlarge
    
-   t3a.2xlarge
    
-   t4g.nano
    
-   t4g.micro
    
-   t4g.small
    
-   t4g.medium
    
-   t4g.large
    
-   t4g.xlarge
    
-   t4g.2xlarge
    
-   u-6tb1.56xlarge
    
-   u-6tb1.112xlarge
    
-   u-9tb1.112xlarge
    
-   u-12tb1.112xlarge
    
-   u-6tb1.metal
    
-   u-9tb1.metal
    
-   u-12tb1.metal
    
-   u-18tb1.metal
    
-   u-24tb1.metal
    
-   vt1.3xlarge
    
-   vt1.6xlarge
    
-   vt1.24xlarge
    
-   x1.16xlarge
    
-   x1.32xlarge
    
-   x1e.xlarge
    
-   x1e.2xlarge
    
-   x1e.4xlarge
    
-   x1e.8xlarge
    
-   x1e.16xlarge
    
-   x1e.32xlarge
    
-   x2iezn.2xlarge
    
-   x2iezn.4xlarge
    
-   x2iezn.6xlarge
    
-   x2iezn.8xlarge
    
-   x2iezn.12xlarge
    
-   x2iezn.metal
    
-   x2gd.medium
    
-   x2gd.large
    
-   x2gd.xlarge
    
-   x2gd.2xlarge
    
-   x2gd.4xlarge
    
-   x2gd.8xlarge
    
-   x2gd.12xlarge
    
-   x2gd.16xlarge
    
-   x2gd.metal
    
-   z1d.large
    
-   z1d.xlarge
    
-   z1d.2xlarge
    
-   z1d.3xlarge
    
-   z1d.6xlarge
    
-   z1d.12xlarge
    
-   z1d.metal
    
-   x2idn.16xlarge
    
-   x2idn.24xlarge
    
-   x2idn.32xlarge
    
-   x2iedn.xlarge
    
-   x2iedn.2xlarge
    
-   x2iedn.4xlarge
    
-   x2iedn.8xlarge
    
-   x2iedn.16xlarge
    
-   x2iedn.24xlarge
    
-   x2iedn.32xlarge
    
-   c6a.large
    
-   c6a.xlarge
    
-   c6a.2xlarge
    
-   c6a.4xlarge
    
-   c6a.8xlarge
    
-   c6a.12xlarge
    
-   c6a.16xlarge
    
-   c6a.24xlarge
    
-   c6a.32xlarge
    
-   c6a.48xlarge
    
-   c6a.metal
    
-   m6a.metal
    
-   i4i.large
    
-   i4i.xlarge
    
-   i4i.2xlarge
    
-   i4i.4xlarge
    
-   i4i.8xlarge
    
-   i4i.16xlarge
    
-   i4i.32xlarge
    
-   i4i.metal
    
-   x2idn.metal
    
-   x2iedn.metal
    
-   c7g.medium
    
-   c7g.large
    
-   c7g.xlarge
    
-   c7g.2xlarge
    
-   c7g.4xlarge
    
-   c7g.8xlarge
    
-   c7g.12xlarge
    
-   c7g.16xlarge
    
-   mac2.metal
    
-   c6id.large
    
-   c6id.xlarge
    
-   c6id.2xlarge
    
-   c6id.4xlarge
    
-   c6id.8xlarge
    
-   c6id.12xlarge
    
-   c6id.16xlarge
    
-   c6id.24xlarge
    
-   c6id.32xlarge
    
-   c6id.metal
    
-   m6id.large
    
-   m6id.xlarge
    
-   m6id.2xlarge
    
-   m6id.4xlarge
    
-   m6id.8xlarge
    
-   m6id.12xlarge
    
-   m6id.16xlarge
    
-   m6id.24xlarge
    
-   m6id.32xlarge
    
-   m6id.metal
    
-   r6id.large
    
-   r6id.xlarge
    
-   r6id.2xlarge
    
-   r6id.4xlarge
    
-   r6id.8xlarge
    
-   r6id.12xlarge
    
-   r6id.16xlarge
    
-   r6id.24xlarge
    
-   r6id.32xlarge
    
-   r6id.metal
    
-   r6a.large
    
-   r6a.xlarge
    
-   r6a.2xlarge
    
-   r6a.4xlarge
    
-   r6a.8xlarge
    
-   r6a.12xlarge
    
-   r6a.16xlarge
    
-   r6a.24xlarge
    
-   r6a.32xlarge
    
-   r6a.48xlarge
    
-   r6a.metal
    
-   p4de.24xlarge
    
-   u-3tb1.56xlarge
    
-   u-18tb1.112xlarge
    
-   u-24tb1.112xlarge
    
-   trn1.2xlarge
    
-   trn1.32xlarge
    
-   hpc6id.32xlarge
    
-   c6in.large
    
-   c6in.xlarge
    
-   c6in.2xlarge
    
-   c6in.4xlarge
    
-   c6in.8xlarge
    
-   c6in.12xlarge
    
-   c6in.16xlarge
    
-   c6in.24xlarge
    
-   c6in.32xlarge
    
-   m6in.large
    
-   m6in.xlarge
    
-   m6in.2xlarge
    
-   m6in.4xlarge
    
-   m6in.8xlarge
    
-   m6in.12xlarge
    
-   m6in.16xlarge
    
-   m6in.24xlarge
    
-   m6in.32xlarge
    
-   m6idn.large
    
-   m6idn.xlarge
    
-   m6idn.2xlarge
    
-   m6idn.4xlarge
    
-   m6idn.8xlarge
    
-   m6idn.12xlarge
    
-   m6idn.16xlarge
    
-   m6idn.24xlarge
    
-   m6idn.32xlarge
    
-   r6in.large
    
-   r6in.xlarge
    
-   r6in.2xlarge
    
-   r6in.4xlarge
    
-   r6in.8xlarge
    
-   r6in.12xlarge
    
-   r6in.16xlarge
    
-   r6in.24xlarge
    
-   r6in.32xlarge
    
-   r6idn.large
    
-   r6idn.xlarge
    
-   r6idn.2xlarge
    
-   r6idn.4xlarge
    
-   r6idn.8xlarge
    
-   r6idn.12xlarge
    
-   r6idn.16xlarge
    
-   r6idn.24xlarge
    
-   r6idn.32xlarge
    
-   c7g.metal
    
-   m7g.medium
    
-   m7g.large
    
-   m7g.xlarge
    
-   m7g.2xlarge
    
-   m7g.4xlarge
    
-   m7g.8xlarge
    
-   m7g.12xlarge
    
-   m7g.16xlarge
    
-   m7g.metal
    
-   r7g.medium
    
-   r7g.large
    
-   r7g.xlarge
    
-   r7g.2xlarge
    
-   r7g.4xlarge
    
-   r7g.8xlarge
    
-   r7g.12xlarge
    
-   r7g.16xlarge
    
-   r7g.metal
    
-   c6in.metal
    
-   m6in.metal
    
-   m6idn.metal
    
-   r6in.metal
    
-   r6idn.metal
    
-   inf2.xlarge
    
-   inf2.8xlarge
    
-   inf2.24xlarge
    
-   inf2.48xlarge
    
-   trn1n.32xlarge
    
-   i4g.large
    
-   i4g.xlarge
    
-   i4g.2xlarge
    
-   i4g.4xlarge
    
-   i4g.8xlarge
    
-   i4g.16xlarge
    
-   hpc7g.4xlarge
    
-   hpc7g.8xlarge
    
-   hpc7g.16xlarge
    
-   c7gn.medium
    
-   c7gn.large
    
-   c7gn.xlarge
    
-   c7gn.2xlarge
    
-   c7gn.4xlarge
    
-   c7gn.8xlarge
    
-   c7gn.12xlarge
    
-   c7gn.16xlarge
    
-   p5.48xlarge
    
-   m7i.large
    
-   m7i.xlarge
    
-   m7i.2xlarge
    
-   m7i.4xlarge
    
-   m7i.8xlarge
    
-   m7i.12xlarge
    
-   m7i.16xlarge
    
-   m7i.24xlarge
    
-   m7i.48xlarge
    
-   m7i-flex.large
    
-   m7i-flex.xlarge
    
-   m7i-flex.2xlarge
    
-   m7i-flex.4xlarge
    
-   m7i-flex.8xlarge
    
-   m7a.medium
    
-   m7a.large
    
-   m7a.xlarge
    
-   m7a.2xlarge
    
-   m7a.4xlarge
    
-   m7a.8xlarge
    
-   m7a.12xlarge
    
-   m7a.16xlarge
    
-   m7a.24xlarge
    
-   m7a.32xlarge
    
-   m7a.48xlarge
    
-   m7a.metal-48xl
    
-   hpc7a.12xlarge
    
-   hpc7a.24xlarge
    
-   hpc7a.48xlarge
    
-   hpc7a.96xlarge
    
-   c7gd.medium
    
-   c7gd.large
    
-   c7gd.xlarge
    
-   c7gd.2xlarge
    
-   c7gd.4xlarge
    
-   c7gd.8xlarge
    
-   c7gd.12xlarge
    
-   c7gd.16xlarge
    
-   m7gd.medium
    
-   m7gd.large
    
-   m7gd.xlarge
    
-   m7gd.2xlarge
    
-   m7gd.4xlarge
    
-   m7gd.8xlarge
    
-   m7gd.12xlarge
    
-   m7gd.16xlarge
    
-   r7gd.medium
    
-   r7gd.large
    
-   r7gd.xlarge
    
-   r7gd.2xlarge
    
-   r7gd.4xlarge
    
-   r7gd.8xlarge
    
-   r7gd.12xlarge
    
-   r7gd.16xlarge
    
-   r7a.medium
    
-   r7a.large
    
-   r7a.xlarge
    
-   r7a.2xlarge
    
-   r7a.4xlarge
    
-   r7a.8xlarge
    
-   r7a.12xlarge
    
-   r7a.16xlarge
    
-   r7a.24xlarge
    
-   r7a.32xlarge
    
-   r7a.48xlarge
    
-   c7i.large
    
-   c7i.xlarge
    
-   c7i.2xlarge
    
-   c7i.4xlarge
    
-   c7i.8xlarge
    
-   c7i.12xlarge
    
-   c7i.16xlarge
    
-   c7i.24xlarge
    
-   c7i.48xlarge
    
-   mac2-m2pro.metal
    
-   r7iz.large
    
-   r7iz.xlarge
    
-   r7iz.2xlarge
    
-   r7iz.4xlarge
    
-   r7iz.8xlarge
    
-   r7iz.12xlarge
    
-   r7iz.16xlarge
    
-   r7iz.32xlarge
    
-   c7a.medium
    
-   c7a.large
    
-   c7a.xlarge
    
-   c7a.2xlarge
    
-   c7a.4xlarge
    
-   c7a.8xlarge
    
-   c7a.12xlarge
    
-   c7a.16xlarge
    
-   c7a.24xlarge
    
-   c7a.32xlarge
    
-   c7a.48xlarge
    
-   c7a.metal-48xl
    
-   r7a.metal-48xl
    
-   r7i.large
    
-   r7i.xlarge
    
-   r7i.2xlarge
    
-   r7i.4xlarge
    
-   r7i.8xlarge
    
-   r7i.12xlarge
    
-   r7i.16xlarge
    
-   r7i.24xlarge
    
-   r7i.48xlarge
    
-   dl2q.24xlarge
    
-   mac2-m2.metal
    
-   i4i.12xlarge
    
-   i4i.24xlarge
    
-   c7i.metal-24xl
    
-   c7i.metal-48xl
    
-   m7i.metal-24xl
    
-   m7i.metal-48xl
    
-   r7i.metal-24xl
    
-   r7i.metal-48xl
    
-   r7iz.metal-16xl
    
-   r7iz.metal-32xl
    
-   c7gd.metal
    
-   m7gd.metal
    
-   r7gd.metal
    
-   g6.xlarge
    
-   g6.2xlarge
    
-   g6.4xlarge
    
-   g6.8xlarge
    
-   g6.12xlarge
    
-   g6.16xlarge
    
-   g6.24xlarge
    
-   g6.48xlarge
    
-   gr6.4xlarge
    
-   gr6.8xlarge
    
-   c7i-flex.large
    
-   c7i-flex.xlarge
    
-   c7i-flex.2xlarge
    
-   c7i-flex.4xlarge
    
-   c7i-flex.8xlarge
    
-   u7i-12tb.224xlarge
    
-   u7in-16tb.224xlarge
    
-   u7in-24tb.224xlarge
    
-   u7in-32tb.224xlarge
    
-   u7ib-12tb.224xlarge
    
-   c7gn.metal
    
-   r8g.medium
    
-   r8g.large
    
-   r8g.xlarge
    
-   r8g.2xlarge
    
-   r8g.4xlarge
    
-   r8g.8xlarge
    
-   r8g.12xlarge
    
-   r8g.16xlarge
    
-   r8g.24xlarge
    
-   r8g.48xlarge
    
-   r8g.metal-24xl
    
-   r8g.metal-48xl
    
-   mac2-m1ultra.metal
    
-   g6e.xlarge
    
-   g6e.2xlarge
    
-   g6e.4xlarge
    
-   g6e.8xlarge
    
-   g6e.12xlarge
    
-   g6e.16xlarge
    
-   g6e.24xlarge
    
-   g6e.48xlarge
    
-   c8g.medium
    
-   c8g.large
    
-   c8g.xlarge
    
-   c8g.2xlarge
    
-   c8g.4xlarge
    
-   c8g.8xlarge
    
-   c8g.12xlarge
    
-   c8g.16xlarge
    
-   c8g.24xlarge
    
-   c8g.48xlarge
    
-   c8g.metal-24xl
    
-   c8g.metal-48xl
    
-   m8g.medium
    
-   m8g.large
    
-   m8g.xlarge
    
-   m8g.2xlarge
    
-   m8g.4xlarge
    
-   m8g.8xlarge
    
-   m8g.12xlarge
    
-   m8g.16xlarge
    
-   m8g.24xlarge
    
-   m8g.48xlarge
    
-   m8g.metal-24xl
    
-   m8g.metal-48xl
    
-   x8g.medium
    
-   x8g.large
    
-   x8g.xlarge
    
-   x8g.2xlarge
    
-   x8g.4xlarge
    
-   x8g.8xlarge
    
-   x8g.12xlarge
    
-   x8g.16xlarge
    
-   x8g.24xlarge
    
-   x8g.48xlarge
    
-   x8g.metal-24xl
    
-   x8g.metal-48xl
    
-   i7ie.large
    
-   i7ie.xlarge
    
-   i7ie.2xlarge
    
-   i7ie.3xlarge
    
-   i7ie.6xlarge
    
-   i7ie.12xlarge
    
-   i7ie.18xlarge
    
-   i7ie.24xlarge
    
-   i7ie.48xlarge
    
-   i8g.large
    
-   i8g.xlarge
    
-   i8g.2xlarge
    
-   i8g.4xlarge
    
-   i8g.8xlarge
    
-   i8g.12xlarge
    
-   i8g.16xlarge
    
-   i8g.24xlarge
    
-   i8g.metal-24xl
    
-   u7i-6tb.112xlarge
    
-   u7i-8tb.112xlarge
    
-   u7inh-32tb.480xlarge
    
-   p5e.48xlarge
    
-   p5en.48xlarge
    
-   f2.12xlarge
    
-   f2.48xlarge
    
-   trn2.48xlarge
    
-   c7i-flex.12xlarge
    
-   c7i-flex.16xlarge
    
-   m7i-flex.12xlarge
    
-   m7i-flex.16xlarge
    
-   i7ie.metal-24xl
    
-   i7ie.metal-48xl
    
-   i8g.48xlarge
    
-   c8gd.medium
    
-   c8gd.large
    
-   c8gd.xlarge
    
-   c8gd.2xlarge
    
-   c8gd.4xlarge
    
-   c8gd.8xlarge
    
-   c8gd.12xlarge
    
-   c8gd.16xlarge
    
-   c8gd.24xlarge
    
-   c8gd.48xlarge
    
-   c8gd.metal-24xl
    
-   c8gd.metal-48xl
    
-   i7i.large
    
-   i7i.xlarge
    
-   i7i.2xlarge
    
-   i7i.4xlarge
    
-   i7i.8xlarge
    
-   i7i.12xlarge
    
-   i7i.16xlarge
    
-   i7i.24xlarge
    
-   i7i.48xlarge
    
-   i7i.metal-24xl
    
-   i7i.metal-48xl
    
-   p6-b200.48xlarge
    
-   m8gd.medium
    
-   m8gd.large
    
-   m8gd.xlarge
    
-   m8gd.2xlarge
    
-   m8gd.4xlarge
    
-   m8gd.8xlarge
    
-   m8gd.12xlarge
    
-   m8gd.16xlarge
    
-   m8gd.24xlarge
    
-   m8gd.48xlarge
    
-   m8gd.metal-24xl
    
-   m8gd.metal-48xl
    
-   r8gd.medium
    
-   r8gd.large
    
-   r8gd.xlarge
    
-   r8gd.2xlarge
    
-   r8gd.4xlarge
    
-   r8gd.8xlarge
    
-   r8gd.12xlarge
    
-   r8gd.16xlarge
    
-   r8gd.24xlarge
    
-   r8gd.48xlarge
    
-   r8gd.metal-24xl
    
-   r8gd.metal-48xl
    
-   c8gn.medium
    
-   c8gn.large
    
-   c8gn.xlarge
    
-   c8gn.2xlarge
    
-   c8gn.4xlarge
    
-   c8gn.8xlarge
    
-   c8gn.12xlarge
    
-   c8gn.16xlarge
    
-   c8gn.24xlarge
    
-   c8gn.48xlarge
    
-   c8gn.metal-24xl
    
-   c8gn.metal-48xl
    
-   f2.6xlarge
    
-   p6e-gb200.36xlarge
    
-   g6f.large
    
-   g6f.xlarge
    
-   g6f.2xlarge
    
-   g6f.4xlarge
    
-   gr6f.4xlarge
    
-   p5.4xlarge
    
-   r8i.large
    
-   r8i.xlarge
    
-   r8i.2xlarge
    
-   r8i.4xlarge
    
-   r8i.8xlarge
    
-   r8i.12xlarge
    
-   r8i.16xlarge
    
-   r8i.24xlarge
    
-   r8i.32xlarge
    
-   r8i.48xlarge
    
-   r8i.96xlarge
    
-   r8i.metal-48xl
    
-   r8i.metal-96xl
    
-   r8i-flex.large
    
-   r8i-flex.xlarge
    
-   r8i-flex.2xlarge
    
-   r8i-flex.4xlarge
    
-   r8i-flex.8xlarge
    
-   r8i-flex.12xlarge
    
-   r8i-flex.16xlarge
    
-   m8i.large
    
-   m8i.xlarge
    
-   m8i.2xlarge
    
-   m8i.4xlarge
    
-   m8i.8xlarge
    
-   m8i.12xlarge
    
-   m8i.16xlarge
    
-   m8i.24xlarge
    
-   m8i.32xlarge
    
-   m8i.48xlarge
    
-   m8i.96xlarge
    
-   m8i.metal-48xl
    
-   m8i.metal-96xl
    
-   m8i-flex.large
    
-   m8i-flex.xlarge
    
-   m8i-flex.2xlarge
    
-   m8i-flex.4xlarge
    
-   m8i-flex.8xlarge
    
-   m8i-flex.12xlarge
    
-   m8i-flex.16xlarge
    
-   i8ge.large
    
-   i8ge.xlarge
    
-   i8ge.2xlarge
    
-   i8ge.3xlarge
    
-   i8ge.6xlarge
    
-   i8ge.12xlarge
    
-   i8ge.18xlarge
    
-   i8ge.24xlarge
    
-   i8ge.48xlarge
    
-   i8ge.metal-24xl
    
-   i8ge.metal-48xl
    
-   mac-m4.metal
    
-   mac-m4pro.metal
    
-   r8gn.medium
    
-   r8gn.large
    
-   r8gn.xlarge
    
-   r8gn.2xlarge
    
-   r8gn.4xlarge
    
-   r8gn.8xlarge
    
-   r8gn.12xlarge
    
-   r8gn.16xlarge
    
-   r8gn.24xlarge
    
-   r8gn.48xlarge
    
-   r8gn.metal-24xl
    
-   r8gn.metal-48xl
    
-   c8i.large
    
-   c8i.xlarge
    
-   c8i.2xlarge
    
-   c8i.4xlarge
    
-   c8i.8xlarge
    
-   c8i.12xlarge
    
-   c8i.16xlarge
    
-   c8i.24xlarge
    
-   c8i.32xlarge
    
-   c8i.48xlarge
    
-   c8i.96xlarge
    
-   c8i.metal-48xl
    
-   c8i.metal-96xl
    
-   c8i-flex.large
    
-   c8i-flex.xlarge
    
-   c8i-flex.2xlarge
    
-   c8i-flex.4xlarge
    
-   c8i-flex.8xlarge
    
-   c8i-flex.12xlarge
    
-   c8i-flex.16xlarge
    
-   r8gb.medium
    
-   r8gb.large
    
-   r8gb.xlarge
    
-   r8gb.2xlarge
    
-   r8gb.4xlarge
    
-   r8gb.8xlarge
    
-   r8gb.12xlarge
    
-   r8gb.16xlarge
    
-   r8gb.24xlarge
    
-   r8gb.metal-24xl
    
-   m8a.medium
    
-   m8a.large
    
-   m8a.xlarge
    
-   m8a.2xlarge
    
-   m8a.4xlarge
    
-   m8a.8xlarge
    
-   m8a.12xlarge
    
-   m8a.16xlarge
    
-   m8a.24xlarge
    
-   m8a.48xlarge
    
-   m8a.metal-24xl
    
-   m8a.metal-48xl
    
-   trn2.3xlarge
    
-   r8a.medium
    
-   r8a.large
    
-   r8a.xlarge
    
-   r8a.2xlarge
    
-   r8a.4xlarge
    
-   r8a.8xlarge
    
-   r8a.12xlarge
    
-   r8a.16xlarge
    
-   r8a.24xlarge
    
-   r8a.48xlarge
    
-   r8a.metal-24xl
    
-   r8a.metal-48xl
    
-   p6-b300.48xlarge
    
-   c8a.medium
    
-   c8a.large
    
-   c8a.xlarge
    
-   c8a.2xlarge
    
-   c8a.4xlarge
    
-   c8a.8xlarge
    
-   c8a.12xlarge
    
-   c8a.16xlarge
    
-   c8a.24xlarge
    
-   c8a.48xlarge
    
-   c8a.metal-24xl
    
-   c8a.metal-48xl
    
-   c8gb.12xlarge
    
-   c8gb.16xlarge
    
-   c8gb.24xlarge
    
-   c8gb.2xlarge
    
-   c8gb.4xlarge
    
-   c8gb.8xlarge
    
-   c8gb.large
    
-   c8gb.medium
    
-   c8gb.metal-24xl
    
-   c8gb.xlarge
    
-   c8gb.48xlarge
    
-   c8gb.metal-48xl
    
-   m8gb.12xlarge
    
-   m8gb.16xlarge
    
-   m8gb.24xlarge
    
-   m8gb.2xlarge
    
-   m8gb.4xlarge
    
-   m8gb.8xlarge
    
-   m8gb.large
    
-   m8gb.medium
    
-   m8gb.xlarge
    
-   m8gb.48xlarge
    
-   m8gb.metal-24xl
    
-   m8gb.metal-48xl
    
-   m8gn.12xlarge
    
-   m8gn.16xlarge
    
-   m8gn.24xlarge
    
-   m8gn.2xlarge
    
-   m8gn.48xlarge
    
-   m8gn.4xlarge
    
-   m8gn.8xlarge
    
-   m8gn.large
    
-   m8gn.medium
    
-   m8gn.xlarge
    
-   m8gn.metal-24xl
    
-   m8gn.metal-48xl
    
-   x8aedz.12xlarge
    
-   x8aedz.24xlarge
    
-   x8aedz.3xlarge
    
-   x8aedz.6xlarge
    
-   x8aedz.large
    
-   x8aedz.metal-12xl
    
-   x8aedz.metal-24xl
    
-   x8aedz.xlarge
    
-   m8azn.medium
    
-   m8azn.large
    
-   m8azn.xlarge
    
-   m8azn.3xlarge
    
-   m8azn.6xlarge
    
-   m8azn.12xlarge
    
-   m8azn.24xlarge
    
-   m8azn.metal-12xl
    
-   m8azn.metal-24xl
    
-   x8i.large
    
-   x8i.xlarge
    
-   x8i.2xlarge
    
-   x8i.4xlarge
    
-   x8i.8xlarge
    
-   x8i.12xlarge
    
-   x8i.16xlarge
    
-   x8i.24xlarge
    
-   x8i.32xlarge
    
-   x8i.48xlarge
    
-   x8i.64xlarge
    
-   x8i.96xlarge
    
-   x8i.metal-48xl
    
-   x8i.metal-96xl
    
-   mac-m4max.metal
    
-   g7e.2xlarge
    
-   g7e.4xlarge
    
-   g7e.8xlarge
    
-   g7e.12xlarge
    
-   g7e.24xlarge
    
-   g7e.48xlarge
    
-   r8id.large
    
-   r8id.xlarge
    
-   r8id.2xlarge
    
-   r8id.4xlarge
    
-   r8id.8xlarge
    
-   r8id.12xlarge
    
-   r8id.16xlarge
    
-   r8id.24xlarge
    
-   r8id.32xlarge
    
-   r8id.48xlarge
    
-   r8id.96xlarge
    
-   r8id.metal-48xl
    
-   r8id.metal-96xl
    
-   null
    





 |  | InstanceType |
| **CamelAwsEC2Operation** (producer) Constant: [`OPERATION`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#OPERATION) | The operation we want to perform. |  | String |
| **CamelAwsEC2InstanceMinCount** (producer) Constant: [`INSTANCE_MIN_COUNT`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#INSTANCE_MIN_COUNT) | The minimum number of instances we want to run. |  | Integer |
| **CamelAwsEC2InstanceMaxCount** (producer) Constant: [`INSTANCE_MAX_COUNT`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#INSTANCE_MAX_COUNT) | The maximum number of instances we want to run. |  | Integer |
| **CamelAwsEC2InstanceMonitoring** (producer) Constant: [`INSTANCE_MONITORING`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#INSTANCE_MONITORING) | Define if we want the running instances to be monitored. |  | Boolean |
| **CamelAwsEC2InstanceKernelId** (producer) Constant: [`INSTANCE_KERNEL_ID`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#INSTANCE_KERNEL_ID) | The ID of the kernel. |  | String |
| **CamelAwsEC2InstanceEbsOptimized** (producer) Constant: [`INSTANCE_EBS_OPTIMIZED`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#INSTANCE_EBS_OPTIMIZED) | Define if the creating instance is optimized for EBS I/O. |  | Boolean |
| **CamelAwsEC2InstanceSecurityGroups** (producer) Constant: [`INSTANCE_SECURITY_GROUPS`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#INSTANCE_SECURITY_GROUPS) | The security groups to associate to the instances. |  | Collection |
| **CamelAwsEC2InstancesIds** (producer) Constant: [`INSTANCES_IDS`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#INSTANCES_IDS) | A collection of instances IDS to execute start, stop, describe and terminate operations on. |  | Collection |
| **CamelAwsEC2InstancesKeyPair** (producer) Constant: [`INSTANCES_KEY_PAIR`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#INSTANCES_KEY_PAIR) | The name of the key pair. |  | String |
| **CamelAwsEC2InstancesClientToken** (producer) Constant: [`INSTANCES_CLIENT_TOKEN`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#INSTANCES_CLIENT_TOKEN) | Unique, case-sensitive identifier you provide to ensure the idempotency of the request. |  | String |
| **CamelAwsEC2InstancesPlacement** (producer) Constant: [`INSTANCES_PLACEMENT`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#INSTANCES_PLACEMENT) | The placement for the instance. |  | Placement |
| **CamelAwsEC2InstancesTags** (producer) Constant: [`INSTANCES_TAGS`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#INSTANCES_TAGS) | A collection of tags to add or remove from EC2 resources. |  | Collection |
| **CamelAwsEC2SubnetId** (producer) Constant: [`SUBNET_ID`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#SUBNET_ID) | The ID of the subnet to launch the instance into. |  | String |
| **CamelAwsEC2NextToken** (describeInstances describeInstancesStatus) Constant: [`NEXT_TOKEN`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#NEXT_TOKEN) | The token for the next set of results. |  | String |
| **CamelAwsEC2MaxResults** (describeInstances describeInstancesStatus) Constant: [`MAX_RESULTS`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#MAX_RESULTS) | The maximum number of results to return. |  | Integer |
| **CamelAwsEC2IsTruncated** (describeInstances describeInstancesStatus) Constant: [`IS_TRUNCATED`](https://javadoc.io/doc/org.apache.camel/camel-aws2-ec2/latest/org/apache/camel/component/aws2/ec2/AWS2EC2Constants.html#IS_TRUNCATED) | Whether the response has more results (is truncated). |  | Boolean |

Required EC2 component options

You have to provide the amazonEc2Client in the Registry or your accessKey and secretKey to access the [Amazon EC2](https://aws.amazon.com/ec2/) service.

## Usage

### Static credentials, Default Credential Provider and Profile Credentials Provider

You have the possibility of avoiding the usage of explicit static credentials by specifying the useDefaultCredentialsProvider option and set it to true.

The order of evaluation for Default Credentials Provider is the following:

-   Java system properties - `aws.accessKeyId` and `aws.secretKey`.
    
-   Environment variables - `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`.
    
-   Web Identity Token from AWS STS.
    
-   The shared credentials and config files.
    
-   Amazon ECS container credentials - loaded from the Amazon ECS if the environment variable `AWS_CONTAINER_CREDENTIALS_RELATIVE_URI` is set.
    
-   Amazon EC2 Instance profile credentials.
    

You have also the possibility of using Profile Credentials Provider, by specifying the useProfileCredentialsProvider option to true and profileCredentialsName to the profile name.

Only one of static, default and profile credentials could be used at the same time.

For more information about this you can look at [AWS credentials documentation](https://docs.aws.amazon.com/sdk-for-java/latest/developer-guide/credentials.md)

### Supported producer operations

-   createAndRunInstances
    
-   startInstances
    
-   stopInstances
    
-   terminateInstances
    
-   describeInstances
    
-   describeInstancesStatus
    
-   rebootInstances
    
-   monitorInstances
    
-   unmonitorInstances
    
-   createTags
    
-   deleteTags
    

## Examples

### Producer Examples

-   createAndRunInstances: this operation will create an EC2 instance and run it
    

```java
from("direct:createAndRun")
     .setHeader(EC2Constants.IMAGE_ID, constant("ami-fd65ba94"))
     .setHeader(EC2Constants.INSTANCE_TYPE, constant(InstanceType.T2Micro))
     .setHeader(EC2Constants.INSTANCE_MIN_COUNT, constant("1"))
     .setHeader(EC2Constants.INSTANCE_MAX_COUNT, constant("1"))
     .to("aws2-ec2://TestDomain?accessKey=xxxx&secretKey=xxxx&operation=createAndRunInstances");
```

-   startInstances: this operation will start a list of EC2 instances
    

```java
from("direct:start")
     .process(new Processor() {
            @Override
            public void process(Exchange exchange) throws Exception {
                Collection<String> l = new ArrayList<>();
                l.add("myinstance");
                exchange.getIn().setHeader(AWS2EC2Constants.INSTANCES_IDS, l);
            }
        })
     .to("aws2-ec2://TestDomain?accessKey=xxxx&secretKey=xxxx&operation=startInstances");
```

-   stopInstances: this operation will stop a list of EC2 instances
    

```java
from("direct:stop")
     .process(new Processor() {
            @Override
            public void process(Exchange exchange) throws Exception {
                Collection<String> l = new ArrayList<>();
                l.add("myinstance");
                exchange.getIn().setHeader(AWS2EC2Constants.INSTANCES_IDS, l);
            }
        })
     .to("aws2-ec2://TestDomain?accessKey=xxxx&secretKey=xxxx&operation=stopInstances");
```

-   terminateInstances: this operation will terminate a list of EC2 instances
    

```java
from("direct:stop")
     .process(new Processor() {
            @Override
            public void process(Exchange exchange) throws Exception {
                Collection<String> l = new ArrayList<>();
                l.add("myinstance");
                exchange.getIn().setHeader(AWS2EC2Constants.INSTANCES_IDS, l);
            }
        })
     .to("aws2-ec2://TestDomain?accessKey=xxxx&secretKey=xxxx&operation=terminateInstances");
```

### Using a POJO as body

Sometimes building an AWS Request can be complex because of multiple options. We introduce the possibility to use a POJO as a body. In AWS EC2 there are multiple operations you can submit, as an example for Create and run an instance, you can do something like:

```java
from("direct:start")
  .setBody(RunInstancesRequest.builder().imageId("test-1").instanceType(InstanceType.T2_MICRO).build())
  .to("aws2-ec2://TestDomain?accessKey=xxxx&secretKey=xxxx&operation=createAndRunInstances&pojoRequest=true");
```

In this way, you’ll pass the request directly without the need of passing headers and options specifically related to this operation.

## Dependencies

Maven users will need to add the following dependency to their pom.xml.

**pom.xml**

```xml
<dependency>
    <groupId>org.apache.camel</groupId>
    <artifactId>camel-aws2-ec2</artifactId>
    <version>${camel-version}</version>
</dependency>
```

where `${camel-version}` must be replaced by the actual version of Camel.

## Spring Boot Auto-Configuration

When using aws2-ec2 with Spring Boot make sure to use the following Maven dependency to have support for auto configuration:

```xml
<dependency>
  <groupId>org.apache.camel.springboot</groupId>
  <artifactId>camel-aws2-ec2-starter</artifactId>
  <version>x.x.x</version>
  <!-- use the same version as your Camel core version -->
</dependency>
```

The component supports 23 options, which are listed below.

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **camel.component.aws2-ec2.access-key** | Amazon AWS Access Key. |  | String |
| **camel.component.aws2-ec2.amazon-ec2-client** | To use an existing configured AmazonEC2Client client. The option is a software.amazon.awssdk.services.ec2.Ec2Client type. |  | Ec2Client |
| **camel.component.aws2-ec2.autowired-enabled** | Whether autowiring is enabled. This is used for automatic autowiring options (the option must be marked as autowired) by looking up in the registry to find if there is a single instance of matching type, which then gets configured on the component. This can be used for automatic configuring JDBC data sources, JMS connection factories, AWS Clients, etc. | true | Boolean |
| **camel.component.aws2-ec2.configuration** | The component configuration. The option is a org.apache.camel.component.aws2.ec2.AWS2EC2Configuration type. |  | AWS2EC2Configuration |
| **camel.component.aws2-ec2.enabled** | Whether to enable auto configuration of the aws2-ec2 component. This is enabled by default. |  | Boolean |
| **camel.component.aws2-ec2.health-check-consumer-enabled** | Used for enabling or disabling all consumer based health checks from this component. | true | Boolean |
| **camel.component.aws2-ec2.health-check-producer-enabled** | Used for enabling or disabling all producer based health checks from this component. Notice: Camel has by default disabled all producer based health-checks. You can turn on producer checks globally by setting camel.health.producersEnabled=true. | true | Boolean |
| **camel.component.aws2-ec2.lazy-start-producer** | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | Boolean |
| **camel.component.aws2-ec2.operation** | The operation to perform. It can be createAndRunInstances, startInstances, stopInstances, terminateInstances, describeInstances, describeInstancesStatus, rebootInstances, monitorInstances, unmonitorInstances, createTags or deleteTags. |  | AWS2EC2Operations |
| **camel.component.aws2-ec2.override-endpoint** | Set the need for overriding the endpoint. This option needs to be used in combination with the uriEndpointOverride option. | false | Boolean |
| **camel.component.aws2-ec2.pojo-request** | If we want to use a POJO request as body or not. | false | Boolean |
| **camel.component.aws2-ec2.profile-credentials-name** | If using a profile credentials provider, this parameter will set the profile name. |  | String |
| **camel.component.aws2-ec2.proxy-host** | To define a proxy host when instantiating the EC2 client. |  | String |
| **camel.component.aws2-ec2.proxy-port** | To define a proxy port when instantiating the EC2 client. |  | Integer |
| **camel.component.aws2-ec2.proxy-protocol** | To define a proxy protocol when instantiating the EC2 client. | https | Protocol |
| **camel.component.aws2-ec2.region** | The region in which EC2 client needs to work. When using this parameter, the configuration will expect the lowercase name of the region (for example, ap-east-1) You’ll need to use the name Region.EU\_WEST\_1.id(). |  | String |
| **camel.component.aws2-ec2.secret-key** | Amazon AWS Secret Key. |  | String |
| **camel.component.aws2-ec2.session-token** | Amazon AWS Session Token used when the user needs to assume an IAM role. |  | String |
| **camel.component.aws2-ec2.trust-all-certificates** | If we want to trust all certificates in case of overriding the endpoint. | false | Boolean |
| **camel.component.aws2-ec2.uri-endpoint-override** | Set the overriding uri endpoint. This option needs to be used in combination with overrideEndpoint option. |  | String |
| **camel.component.aws2-ec2.use-default-credentials-provider** | Set whether the EC2 client should expect to load credentials through a default credentials provider or to expect static credentials to be passed in. | false | Boolean |
| **camel.component.aws2-ec2.use-profile-credentials-provider** | Set whether the EC2 client should expect to load credentials through a profile credentials provider. | false | Boolean |
| **camel.component.aws2-ec2.use-session-credentials** | Set whether the EC2 client should expect to use Session Credentials. This is useful in a situation in which the user needs to assume an IAM role for doing operations in EC2. | false | Boolean |